# WhiteboardEditor

./: .gitignore  docker-compose.yml  example.env
.deployment/: ec2-instance-setup.sh
.github/workflows/: ec2_deploy_production.yml  ec2_deploy_testing.yml  monitor_staging_instance.yml  test_rest_api.yml
Frontend/: .yarnrc.yml  Dockerfile  index.html  package.json  vite.config.ts
Frontend/src/: App.tsx  app.config.ts  index.css
Frontend/src/components/: ActionRequestForm.tsx  ActiveUsersHeaderDropdown.tsx  AllowedUsersPopover.tsx  AttributeFillColor.tsx  AttributeFontColor.tsx  AttributeFontSize.tsx  AttributeStrokeColor.tsx  AttributeStrokeWidth.tsx  AuthForm.tsx  Canvas.tsx  (+33 more)
RestAPI/: Dockerfile  package-lock.json  package.json
RestAPI/src/: app.ts
RestAPI/tests/: users.test.ts  whiteboards.test.ts
ReverseProxy/: nginx.conf
TestDatabase/: Dockerfile  init-db.js
WebSocketServer/: Cargo.toml  Dockerfile
WebSocketServer/src/: dummy.rs  lib.rs  main.rs  unit_tests.rs
WebSocketServer/src/wss/: collections.rs  db.rs  jwt.rs  mod.rs  models.rs  protocol.rs  server.rs  store.rs  utils.rs
deployment.d/: README.md  cluster-config.yml  config_map.yml  deploy.sh  frontend_deployment.yml  frontend_service.yml  gateway.yml  http-routes.yml  mailserver-routes.yml  mailserver_deployment.yml  mailserver_pvcs.yml  mailserver_service.yml  mailserver_storage.yml  namespaces.yml  rest_api_deployment.yml  rest_api_service.yml  teardown.sh  update.sh  web_socket_server_deployment.yml  web_socket_server_service.yml
secret_templates.d/: mailserver.env  smb.conf
(+102 files in other folders)
