[package]
name = "web_socket_server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4.42"
mongodb = { version = "3.3.0" }
jwt = "0.16.0"
sha2 = "0.10.9"
hmac = "0.12.1"
serde_with = "3.15.0"

[lib]
name = "wss"
path = "src/wss/mod.rs"
crate-type = ["lib"]

[[bin]]
name = "web_socket_server"
path = "src/main.rs"
test = false
bench = false
